# 2D-Platformer-Engine

./: CMakeLists.txt  README.md
assets/LevelData/: level0.txt
src/Audio/: AudioManager.cpp
src/Level/: Level.cpp  LevelEditor.cpp  LevelManager.cpp
